syntax = "proto3";
package rarimo.rarimocore.tokenmanager;

import "gogoproto/gogo.proto";

option go_package = "github.com/rarimo/rarimo-core/x/tokenmanager/types";

enum Type {
  NATIVE = 0;
  ERC20 = 1;
  ERC721 = 2;
  ERC1155 = 3;
  METAPLEX_NFT = 4;
  METAPLEX_FT = 5;
  NEAR_FT = 6;
  NEAR_NFT = 7;
}

message ItemMetadata {
  string imageUri = 1;
  // Hash of the token image. Encoded into hex string. (optional)
  string imageHash = 2;
  // Seed is used to generate PDA address for Solana
  string seed = 3;
  string uri = 4;
}

message Seed {
  // index
  string seed = 1;
  string item = 2;
}

message Item {
  string index = 1;
  string collection = 2;
  ItemMetadata meta = 3 [(gogoproto.nullable) = false];
  repeated OnChainItemIndex onChain = 4;
}

message OnChainItemIndex {
  string chain = 1;
  string address = 2;
  string tokenID = 3;
}

message OnChainItem {
  OnChainItemIndex index = 1;
  string item = 2;
}
